Wed Dec 30 18:39:21 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.11

	* INSTALL:
	  NEWS:
	  README:
	  configure.in:
	  gtk+.spec:
	  docs/gtk-config.1:
	  gtk/gtkfeatures.h.in: version=1.1.11

1998-12-29  Owen Taylor  <otaylor@srv-19-29.roc.ny.frontiernet.net>

	* gdk/gdkim.c (gdk_wcstombs): Fixed off-by-one
	error when computing length.

Thu Dec 24 14:35:48 1998  Jeff Garzik  <jgarzik@pobox.com>

	* gdk/gdkevents.c, gdk/gdkim.c, gdk/gdkrgb.c, gdk/gdkwindow.c,
	  gtk/gtkprogressbar.c:
	Pull in string.h for various mem*() and str*() functions,
	in an autoconf-friendly way.

Thu Dec 24 12:40:45 1998  Jeff Garzik  <jgarzik@pobox.com>

	* gdk/gdkfont.c: removed unused var
	* gdk/gdkim.c: 64-bit cast
	* gtk/gtkaccelgroup.c: point to const data
	* gtk/gtkdnd.[ch]: (gtk_drag_dest_set, gtk_drag_source_set):
	  Made const-correct.
	* gtk/gtkfontsel.c: kill uninitialized var warning
	* gtk/gtkselection.[ch]: (gtk_target_list_new,
	  gtk_target_list_add_table, gtk_selection_add_targets):
	  Made const-correct.
	* gtk/testgtk.c: 64-bit cast

Thu Dec 24 03:16:52 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* INSTALL:
	  NEWS:
	  README:
	  configure.in:
	  gtk+.spec:
	  docs/gtk-config.1:
	  gtk/gtkfeatures.h.in: version=1.1.10

Wed Dec 23 20:31:40 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c: Fix problem where empty labels were 
	getting a requisition height of zero, and trailing 
	newlines were being ignored.

Wed Dec 23 13:58:14 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c (gtk_label_parse_uline):
	label->label should be the mb text _after_ removing
	the underlines, not before.

	* gtk/gtkmenu.c: Reverted Elliot's tearoff-menu-item
	title hack. If it deserves being done, it deserves
	being done right.
	
1998-12-23  Elliot Lee  <sopwith@redhat.com>

	* gtk/gtkmenu.c: Allow programmer to gtk_object_set_data(obj,
 	"GtkTearoffMenuItem_window_title", ..) on a GtkMenuItem and have